--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,3 +1,8 @@
 customer.params.x=44
 customer.params.y=11
-spring.datasource.url=jdbc:h2:mem:customer-db
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:customer-db}
+spring.datasource.username=${DB_USER:ucad}
+spring.datasource.password=${DB_PASSWORD:ucad}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.datasource.url=jdbc:h2:mem:customer-db
