--- a/account-service.properties
+++ b/account-service.properties
@@ -4,5 +4,9 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${D
 spring.datasource.username=${DB_USER:ucad}
 spring.datasource.password=${DB_PASSWORD:ucad}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
 
 #spring.datasource.url=jdbc:h2:mem:account-db
