--- a/account-service.properties
+++ b/account-service.properties
@@ -1,8 +1,8 @@
 customer.params.a=3
 customer.params.b=4
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:accout-db}
-spring.datasource.username=${DB_USER:ucad}
-spring.datasource.password=${DB_PASSWORD:ucad}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:accout-db}
+#spring.datasource.username=${DB_USER:ucad}
+#spring.datasource.password=${DB_PASSWORD:ucad}
 
 
 #spring.datasource.url=jdbc:h2:mem:account-db
